intro letter spacing issues

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -70,7 +70,7 @@
   input#search{
     background: url('../../../assets/search-icon.svg');
       background-size:22px 22px;
-      background-position: 97%;
+      background-position: 96%;
       background-repeat: no-repeat;
       text-indent: 20px;
   }
