--- a/src/app/components/intro/intro.component.scss
+++ b/src/app/components/intro/intro.component.scss
@@ -32,7 +32,7 @@
       .description{
         width: 60%;
         font-size: 35px;
-        letter-spacing: 0.97px;
+        letter-spacing: 1.07px;
         font-weight: 300;
         height: 73px;
         text-align: center;
